--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-opencv-python-headless==4.10.0.84
-numpy==1.26.4
-pydub==0.25.1
-imageio-ffmpeg==0.5.1
+python-telegram-bot==20.7
+opencv-python-headless==4.10.0.34
+google-api-python-client>=2.0.0
+google-auth-oauthlib>=1.2.0
+numpy==1.26.0
+Pillow==9.4.0
+scipy==1.13.1
+python-dotenv==1.1.1
